# template.python.api

./: CHANGELOG.md  README.md  deploy.py  logging.ini  pyproject.toml
docs/: conf.py
src/templateapi/: __init__.py  exceptions.py  main.py
src/templateapi/api/: demo.py  demo_auth.py
src/templateapi/tests/: test_auth.py  test_template.py
