[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"


[project]
version = "0.2.0"
name = "templateapi"
authors = [{ name = "Felipe Maza", email = "felipe.maza@unican.es" }]
maintainers = [{ name = "Felipe Maza", email = "felipe.maza@unican.es" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
    "Development Status :: 1 - Planning",
    "Programming Language :: Python",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dynamic = ["version", "description"]

dependencies = [
    "fastapi",
    "pytest >=7",
    "python-dotenv",
    "uvicorn",
    "python-jose[cryptography]",
    "passlib",
    "bcrypt==3.2.0",
    "python-multipart",
    "templatelib@git+https://github.com/IHCantabria/template.python.lib#egg=main",
]


[project.optional-dependencies]
dev = [
    "flit",
    "black",
    "httpx",
    "sphinx",
    "myst-nb",
    "sphinx_rtd_theme",
    "toml",
]


[project.urls]
documentation = "https://ihcantabria.github.io/template.python.api/"
repository = "https://github.com/IHCantabria/template.python.api"
changelog = "https://github.com/IHCantabria/template.python.api/blob/main/CHANGELOG.md"


[project.scripts]
template-tests = "templateapi.tests.__init__:run_tests"


[tool.pytest.ini_options]
addopts = "--durations=0 --durations-min=0.1"
testpaths = "src/tests"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial",
]
